player controls not visible to new admin fixed

--- a/frontend/src/styles/main.css
+++ b/frontend/src/styles/main.css
@@ -10,9 +10,13 @@ body {
 }
 
 .chatbox {
-  height: 562px;
+  height: 560px;
 }
 
 .disabled-link {
   pointer-events: none;
+}
+
+.disabled-link button:disabled {
+  opacity: 0.3;
 }
